--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     <h2 class="mt-3">👋 Allo</h2>
     <h1>Je déménage!!</h1>
     <h3 class="mt-2">Je retourne en France donc je vends mes choses.</h3>
-    <h3 class="mt-2">Disponible jusqu'au vendredi 5 août.😊</h3>
+    <h3 class="mt-2">Disponible jusqu'au vendredi 5 août 😊</h3>
     <h3 class="mt-3">Sandy-Line</h3>
-    <div class="d-flex justify-content-center">
-      <a href="mailto:[sandy.thezenas@gmail.com]" class="about-link"
-        >Me contacter</a
-      >
+    <div class="contact-link">
+      <a href="mailto:[sandy.thezenas@gmail.com]"> 📧 Courriel</a>
+      <a href="tel:514-834-4518"> ☎ Télephone</a>
     </div>
 
     <div class="container mt-3">
