--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <h3 class="mt-2">Disponible jusqu'au vendredi 5 août 😊</h3>
     <h3 class="mt-3">Sandy-Line</h3>
     <div class="contact-link">
-      <a href="mailto:[sandy.thezenas@gmail.com]"> 📧 Courriel</a>
-      <a href="tel:514-834-4518"> ☎ Télephone</a>
+      <a href="mailto:[sandy.thezenas@gmail.com]">Courriel</a>
+      <a href="tel:514-834-4518"> Télephone</a>
     </div>
 
     <div class="container mt-3">
