remove 1 exclamation point

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <h2 class="mt-3">👋 Allo</h2>
-    <h1>Je déménage!!</h1>
+    <h1>Je déménage!</h1>
     <h3 class="mt-2">Je retourne en France donc je vends mes choses.</h3>
     <h3 class="mt-2">Disponible jusqu'au vendredi 5 août 😊</h3>
     <h3 class="mt-3">Sandy-Line</h3>
