--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           </div>
         </div>
 
+        <!-- CSS only 
         <div class="card col-sm-3 shadow" style="width: 18rem">
           <img
             src="images/etendoir.JPEG"
@@ -125,9 +126,9 @@
           <div class="card-body">
             <h5 class="card-text">Etendoir, 10$</h5>
           </div>
-        </div>
+        </div> -->
 
-        <div class="card col-sm-3 shadow" style="width: 18rem">
+        <!--<div class="card col-sm-3 shadow" style="width: 18rem">
           <img
             src="images/lampe.JPEG"
             class="card-img-top pt-2 shadow"
@@ -136,7 +137,7 @@
           <div class="card-body">
             <h5 class="card-text">Lampe, 25$</h5>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
