--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
             <h5 class="card-text">Essoreuse à salade 5$</h5>
           </div>
         </div>
-        <div class="card col-sm-3 shadow" style="width: 18rem">
+        <!-- <div class="card col-sm-3 shadow" style="width: 18rem">
           <img
             src="images/blender.JPEG"
             class="card-img-top pt-2 shadow"
             alt="blender"
           />
-          <div class="card-body">
+                    <div class="card-body">
             <h5 class="card-text">Blender 15$</h5>
           </div>
-        </div>
+     
+        </div>-->
+
         <div class="card col-sm-3 shadow" style="width: 18rem">
           <img
             src="images/plastifieuse.JPEG"
