--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="mailto:[sandy.thezenas@gmail.com]">Courriel</a>
       <a href="tel:514-834-4518"> Télephone</a>
     </div>
-
+<!--
     <div class="container mt-3">
       <div class="row d-flex justify-content-center">
         <div class="card col-sm-3 shadow" style="width: 18rem">
@@ -42,7 +42,7 @@
             <h5 class="card-text">Essoreuse à salade 5$</h5>
           </div>
         </div>
-        <!-- <div class="card col-sm-3 shadow" style="width: 18rem">
+         <div class="card col-sm-3 shadow" style="width: 18rem">
           <img
             src="images/blender.JPEG"
             class="card-img-top pt-2 shadow"
