fixed bug responsive

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <h1>Je déménage!</h1>
     <h3 class="mt-2">Je retourne en France donc je vends mes choses.</h3>
 
-    <div class="contact-link">
-     
-      <a href="mailto:[sandy.thezenas@gmail.com]" class="col-sm-2">Courriel</a>
-      <a href="tel:514-834-4518" class="col-sm-2"> Télephone</a>
-   
+    <div class="container contact-link ">
+     <div class="row pt-3">
+      <a href="mailto:[sandy.thezenas@gmail.com]" class="col">Courriel</a>
+      <a href="tel:514-834-4518" class="col"> Télephone</a>
+   </div>
     </div>
 
     <div class="container mt-3">
@@ -58,7 +58,7 @@
         <div class="card col-sm-4 shadow" style="width: 18rem">
           <img
             src="images/hachoir_.JPEG"
-            class="card-img-top pt-2 shadow"
+            class="card-img-top img-fluid pt-2 shadow"
             alt="hachoir"
           />
           <div class="card-body">
