--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <h2 class="mt-3">👋 Allo</h2>
-    <h1>Je déménage!</h1>
-    <h3 class="mt-2">Je retourne en France donc je vends mes choses.</h3>
+    
+    <h3 class="mt-2">Disponible le 26 et le 28 août</h3>
 
     <div class="container contact-link ">
      <div class="row pt-3">
