add bootstrap class for line height

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     ></script>
   </head>
   <body>
-    <h2 class="mt-3">👋 Allo</h2>
+    <h2 class="mt-3">👋 Coucou!</h2>
     
-    <h3 class="mt-2">Disponible le 26 et le 28 août</h3>
+    <h3 class="mt-2 lh-base">C'est bientôt l'heure de mon départ 🛫 <br>
+      Voici la liste des derniers articles <strong class="">disponible le 26 et le 28 août</strong>. <br>À bientôt !</h3>
 
     <div class="container contact-link ">
      <div class="row pt-3">
